--- a/index.html
+++ b/index.html
@@ -15,14 +15,16 @@
 <div class="advicenumber"> Advice #<span class="advicenumber"></span></div>
  <div class ="advicetext"></div>
  <img src="pattern-divider-desktop.svg" alt="screen divider" class="divider">
- <button id="advicegenerator" onclick="getAdvice()"> <img src="icon-dice.svg" alt="advice generator button" class="dice-icon"> </button>
+ <button id="advicegenerator" onclick="getAdvice()"> <img src="icon-dice.svg" 
+  alt="advice generator button" class="dice-icon"> </button>
  </div>
  
-   <footer class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a> and
-    Coded by <a href="https://github.com/Emna747" target="_blank">Emna KH </a>.
-  </footer>
+   
  <script src="script.js"></script>
 </body>
-<footer>Made with <i class="fa-solid fa-heart"></i> by Emna Khalfaoui</footer>
+<footer class="attribution">
+  Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a> -
+  Coded  with <i class="fa-solid fa-heart"></i> by <a href="https://github.com/Emna747" 
+  target="_blank">Emna Khalfaoui </a>
+</footer>
 </html>
