--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
  
   <div class="wrapper">
-<div class="advicenumber"> Advice #<span class="advicenumber"></span></div>
- <div class ="advicetext"></div>
+<div class="advicenumero"> Advice #<span id="advicenumber"></div>
+ <div class ="advicecontent"><span id="advicetext"></span></div>
  <img src="pattern-divider-desktop.svg" alt="screen divider" class="divider">
- <button id="advicegenerator" onclick="getAdvice()"> <img src="icon-dice.svg" 
+ <button id="advicegenerator"> <img src="icon-dice.svg" 
   alt="advice generator button" class="dice-icon"> </button>
  </div>
  
