--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
 <footer class="attribution">
   Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a> -
   Coded  with <i class="fa-solid fa-heart"></i> by <a href="https://github.com/Emna747" 
-  target="_blank">Emna Khalfaoui </a>
+  target="_blank">Emna  </a>
 </footer>
 </html>
